[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Enemies/enemigoGusano1.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Objects/Enemies/enemy1.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemies/AnimatedSprite.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 9 )

[node name="enemy1" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
collision/safe_margin = 0.008
script = ExtResource( 2 )

[node name="hurtBox" type="Area2D" parent="."]
input_pickable = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtBox"]
modulate = Color( 0, 0.505882, 1, 1 )
self_modulate = Color( 0, 0.109804, 1, 1 )
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
frame = 3
playing = true
offset = Vector2( 0, 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="colLeft" type="RayCast2D" parent="."]
position = Vector2( -29, 9 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="colRight" type="RayCast2D" parent="."]
position = Vector2( 29, 9 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="hurtBox" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="hurtBox" to="." method="_on_Area2D_body_exited"]
